AUTOMAKE_OPTIONS=foreign subdir-objects
ACLOCAL_AMFLAGS = -I m4
AM_CPPFLAGS = -Wall -g  $(SAFTBUS_CFLAGS) $(SAFTLIB_CFLAGS) -I $(top_srcdir)/src -I $(top_builddir)/src -DDATADIR='"$(datadir)/@PACKAGE@"'

pkgdir = @libdir@/pkgconfig
#the file leap-seconds.list ist needed by the Time class to convert between UTC and WR-time
firmwarebindir = $(datadir)/@PACKAGE@
firmwarebin_DATA = fg-firemware.bin
EXTRA_DIST = fg-firmware.bin


lib_LTLIBRARIES = \
	lib@PACKAGE@-service.la  \
	lib@PACKAGE@-proxy.la    
# @PACKAGE@ is substituded with the string given to AC_INIT([...])
lib@PACKAGE@_service_la_LDFLAGS = -Wl,--export-dynamic 
lib@PACKAGE@_service_la_CPPADD  = $(SAFTLIB_CFLAGS) $(EB_CFLAGS) $(SIGCPP_CFLAGS)
lib@PACKAGE@_service_la_LIBADD  = $(SAFTLIB_LIBS)   $(EB_LIBS)   $(SIGCPP_LIBS)
lib@PACKAGE@_service_la_SOURCES = \
	src/FgFirmware.cpp             \
	src/create_service.cpp

lib@PACKAGE@_service_includedir = $(includedir)/saftlib/service
lib@PACKAGE@_service_include_HEADERS = \
	src/FgFirmware.hpp                  

# 	src/FgFirmware_Service.hpp            \
# the service headers are not neede by client programs (even standalone ones), right???

lib@PACKAGE@_proxy_la_LIBADD  = $(SAFTBUS_LIBS) $(SIGCPP_LIBS)
lib@PACKAGE@_proxy_la_SOURCES =   \
	src/FgFirmware_Proxy.cpp       

lib@PACKAGE@_proxy_includedir = $(includedir)/saftlib
lib@PACKAGE@_proxy_include_HEADERS = \
	src/FgFirmware_Proxy.hpp          

bin_PROGRAMS = saft-fg-ctl

saft_fg_ctl_LDADD   = $(EB_LIBS) $(SAFTBUS_LIBS) $(SIGCPP_LIBS) -lpthread lib@PACKAGE@-proxy.la
saft_fg_ctl_SOURCES = src/saft-fg-ctl.cpp

# autogenerated files
%_Service.cpp %_Service.hpp %_Proxy.cpp %_Proxy.hpp: %.hpp
	saftbus-gen $< -o src

# cleaning of autogenerated files
CLEANFILES = $(top_builddir)/src/*_Proxy.*pp $(top_builddir)/src/*_Service.*pp 
